@@ -509,4 +509,9 @@
     <string name="error_loading_timeline">Couldn\'t load timeline! Try checking your data connection.</string>
     <string name="currently_in_beta">Currently in BETA.</string>
     <string name="changed_screenname">You changed your username before Talon could save your ID! You will have to log out and back in once to make the correct changes!</string>
+    <string name="menu_save_search">Save Search</string>
+    <string name="saving_search">Saving Search</string>
+    <string name="delete_saved_search">Delete Saved Search</string>
+    <string name="deleting_search">Deleting Search</string>
+
 </resources>
